# backblaze-b2-client-rs

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  simple_client.rs  throttle.rs
src/definitions/: bodies.rs  headers.rs  mod.rs  query_params.rs  responses.rs  shared.rs
src/tasks/: mod.rs  shared.rs
src/tasks/upload/: error.rs  file_upload.rs  large_file_sha1.rs  mod.rs  options.rs  upload_buffer.rs  upload_details.rs
src/util/: callback.rs  file_stream.rs  into_header_map.rs  is_valid.rs  mod.rs  retry_strategy.rs  size_unit.rs  time_series.rs  write_lock_arc.rs
