[package]
name = "backblaze-b2-client"
version = "0.1.6"
edition = "2021"
rust-version = "1.84.1"
license = "MIT"
description = "Backblaze B2 Client for Rust"
repository = "https://github.com/SalahaldinBilal/backblaze-b2-client-rs"
readme = "README.md"
keywords = ["backblaze", "b2", "api", "client"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.12.14", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
strum = "0.27.1"
strum_macros = "0.27.1"
typed-builder = "0.20.1"
serde_json = "1.0.140"
serde_with = "3.12.0"
num = "0.4.3"
futures-core = "0.3.31"
bytes = "1.10.1"
futures = "0.3.31"
urlencoding = "2.1.3"
sha1_smol = { version = "1.0.1", features = ["std"] }
async-stream = "0.3.6"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
rand = "0.9.0"

[workspace]
resolver = "2"
